[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Main Scene.gd" type="Script" id=3]

[node name="Main Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.486275, 0.486275, 0.486275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 462.0
margin_right = 562.0
margin_bottom = 600.0
size_flags_horizontal = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PE" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 249.0
margin_right = 100.0
margin_bottom = 280.0

[node name="Play" type="Button" parent="HBoxContainer/VBoxContainer/PE"]
margin_right = 48.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Play"

[node name="Edit" type="Button" parent="HBoxContainer/VBoxContainer/PE"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Edit"

[node name="SL" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 284.0
margin_right = 100.0
margin_bottom = 315.0

[node name="Save" type="Button" parent="HBoxContainer/VBoxContainer/SL"]
margin_right = 47.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Save"

[node name="Load" type="Button" parent="HBoxContainer/VBoxContainer/SL"]
margin_left = 51.0
margin_right = 100.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Load"

[node name="Quit" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 319.0
margin_right = 100.0
margin_bottom = 350.0
text = "Quit"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/PE/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/PE/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/SL/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/SL/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
